# microcaml

./: .gitignore  dune-project  microcaml.opam
lib/: dune  interpreter.ml  lexer.mll  parser.mly
sample-mml/: fib.mml  is_prime.mml
